add Improvement notes